--- a/functions/iteration.Rmd
+++ b/functions/iteration.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Iterating with lists and purrr"
+title: "Functional programming and iterating with lists and purrr"
 output: html_document
 ---
 
@@ -94,36 +94,85 @@ map_dbl(wip_dat, range_wip) # exercise
 map_dbl(wip_dat, range_wip) %>% sort() # exercise
 ```
 
+# Anonymous functions
+
+For short function sometimes is not worth naming your function. Instead we can you something called anonymous functions.
+
+As an example, we could rewrite our calculations above that take the mean women in parliament percentage for each country after dropping the lowest year using an anonymous function:
+
+```{r}
+map_dbl(wip_dat, function(x) (sum(x) - min(x)) / (length(x) - 1))
+```
+
+`function(x) (sum(x) - min(x)) / (length(x) - 1)` exists internally but does not have a name. It is an anonymous function. Usually they should be short, ideally fitting on 1 or maybe 2 lines.
+
+purrr has a shortcut for anonymous functions because they are a very common and useful way of working:
+
+```{r}
+map_dbl(wip_dat, ~ (sum(.x) - min(.x)) / (length(.x) - 1))
+```
+
+If you are collaborating with people who haven't used purrr, they might find this confusing!
+
 # Iterating with multiple inputs
+
+So far we've only worked with a single input argument in our functional programming. Often that's all you need, but sometimes you need multiple inputs.
+
+purrr contains `map2` variants of its map functions that our specialized for 2 inputs and `pmap` (p = parallel) variants that work with an unlimited number of inputs. 
+
+Note this is not parallel processing on multiple cores, this is parallel in the sense of the `pmin()` or `pmax()` functions.
+
+The `map2()` functions create named inputs of `.x` and `.y` for the first and second arguments. For example, let's fit a linear regression to the women in parliament data over time for each country (we will use an anonymous function):
 
 ```{r}
 map2(years, wip_dat, ~ lm(.y ~ .x))
+map2(years, wip_dat, function(.x, .y) lm(.y ~ .x)) # equivalent
+```
+
+If instead we wanted to use the more generic `pmap()`, we could do it like this:
+
+```{r}
 pmap(list(years, wip_dat), function(x, y) lm(y ~ x))
 ```
 
+Notice how you could extend this to have an unlimited number of arguments.
+
+# Exercise
+
+The following is a short function to return the slope from a regression of the percentage of women in parliament over time:
+
 ```{r}
+# x = years and y = wip_dat
 get_slope <- function(x, y) {
   m <- lm(y ~ x)
   coef(m)[[2]]
 }
-map2_dbl(years, wip_dat, get_slope)
-map2_dbl(years, wip_dat, ~ get_slope(.x, .y))
-map2_dbl(years, wip_dat, function(.x, .y) get_slope(.x, .y))
-
-map2_dbl(years, wip_dat, get_slope) %>% sort()
-map2_dbl(years, wip_dat, get_slope) %>%
-  sort() %>%
-  rev()
 ```
+
+Use `map2_dbl()` to return the slope for each country. Try it 3 ways:
+
+1. The way written below
+2. Via the `~` shortcut to an anonymous function.
+3. Via the standard R anonymous function syntax.
+
+Why might you pick one over another?
+
+Try passing the results through `sort()` and optionally `rev()` to find the most positive and negative slopes.
 
 ```{r}
-df <- data.frame(
-  x = c(1, 2, 5),
-  y = c(5, 4, 8)
-)
-map2_dbl(df$x, df$y, min)
-pmap_dbl(df, min)
+map2_dbl(years, wip_dat, get_slope)
+map2_dbl(years, wip_dat, ~ get_slope(.x, .y)) # exercise
+map2_dbl(years, wip_dat, function(.x, .y) get_slope(.x, .y)) # exercise
+
+map2_dbl(years, wip_dat, get_slope) %>% sort() # exercise
+map2_dbl(years, wip_dat, get_slope) %>% sort() %>% rev() # exercise
 ```
+
+# Data frames are lists! And tricks for extra variables
+
+Remember that data frames are lists so they can be passed as input to `pmap()`. Since data manipulation often happens in a data frame, this is a useful thing to remember.
+
+However, we often end up in a situation like the following:
 
 ```{r}
 df <- data.frame(
@@ -131,16 +180,34 @@ df <- data.frame(
   y = 3:1 - 0.1,
   z = letters[1:3]
 )
+```
+
+Why doesn't the following work?
+
+```{r, error=TRUE}
 plus <- function(x, y) x + y
-plus2 <- function(x, y, ...) x + y
+pmap_dbl(df, plus)
+```
+
+How can we fix it? There are at least 2 ways. Think about it for a minute.
+
+Hint: one of the solutions involves `...`.
+
+```{r}
+plus2 <- function(x, y, ...) x + y  # exercise
 pmap_dbl(df, plus2)
+
+plus3 <- function(x, y, z) x + y  # exercise
+pmap_dbl(df, plus3)
 ```
 
 # Exercise
 
-- Calculate the slope of the percentage of women in parliament for each country but only for the years 2010 and after.
-- Make the 2010 an argument named `cutoff` and try passing it via the `...` with your `map()` function.
-- Rerun your calculation for all years 2005 and after.
+Let's put this all together and try the following:
+
+1. Make a function to calculate the slope of the percentage of women in parliament for each country but only for the years 2010 and after.
+2. Make the 2010 an argument named `cutoff` and try passing it via the `...` with your `map()` function.
+- Rerun your calculation for all years 2005 and after using your new function.
 
 ```{r}
 get_slope2 <- function(yrs, wip, cutoff = 2010) { # exercise
@@ -157,7 +224,7 @@ map2_dbl(years, wip_dat, get_slope2, cutoff = 2005) %>% sort() # exercise
 
 Was that too easy? If so, try the following next-level purrr exercise in one set of pipes:
 
-- Using your function to get a slope for a given country and a given year cut off, use `map()` to also iterate over year thresholds of `seq(1990, 2010, 5)`.
+- Using your last function, use `map()` to also iterate over year thresholds of `seq(1990, 2010, 5)`.
 - Use `map()` to `sort()` the output from highest to lowest value (i.e. also use `rev()`).
 - Use `[`() to extract only the top 5 countries for each cut off.
 
