--- a/functions/debugging.Rmd
+++ b/functions/debugging.Rmd
@@ -1,8 +1,9 @@
 ---
-title: "Untitled"
-author: "Sean Anderson"
-date: "13/09/2019"
+title: "Debugging in R"
 output: html_document
 ---
 
-Computer is always right.
+```{r}
+
+```
+
