--- a/functions/debugging.Rmd
+++ b/functions/debugging.Rmd
@@ -4,6 +4,109 @@ output: html_document
 ---
 
 ```{r}
-
+d <- list.files(here::here("data-raw"), full.names = TRUE,
+  pattern = "^The") %>% 
+  purrr::map_df(readr::read_csv)
+names(d) <- tolower(names(d))
 ```
 
+# Exercise (browser)
+
+Figure out the bug when you run `get_climates()` below.
+
+Hint: Use `traceback()` to find where it occurs, add `browser()` calls
+Hint: Look at the types of the data and think about what the function expects.
+
+```{r}
+# Separate, flatten, and trim values in the vector
+clean <- function(vec) {
+  values <- strsplit(as.character(vec), ",")
+  flat_values <- unlist(values)
+  trimmed_values <- stringr::str_trim(flat_values)
+  trimmed_values
+}
+
+# Clean vector and get the unique values
+uniquify <- function(vec) {
+  clean_values <- clean(vec)
+  unique_values <- unique(clean_values)
+  unique_values
+}
+
+# Read data and get unique climate values
+get_climates <- function() {
+  planets <- read.csv2(here::here("data-raw/planets.csv"))
+  unique_climate <- uniquify(planets$climate)
+  unique_climate
+}
+
+get_climates()
+
+# This example originally used in Amanda Gadrow's excellent debugging talk at rstudio::conf 2018,
+# https://github.com/ajmcoqui/debuggingRStudio/blob/b70a3575a3ff5e7867b05fb5e84568abba426c4b/error_example.R
+# and
+# https://whattheyforgot.org/debugging-r-code.html
+```
+
+Once you have the above working, use `debugonce()` to step into `get_climates()` and look at what the `planets` data frame looks like when it is first read in.
+
+# Exercise (debug)
+
+Use `debugonce()` to step into `hist()`, step through the insanity that is the calculation of the breaks, and figure out what the value of `fuzzybreaks` is.
+
+Hint: it's a ways down on line 88.
+
+```{r}
+set.seed(1)
+hist(rnorm(100))
+```
+
+Use `debugonce()` to step through `ggplot2::ggplot`.
+
+Separately, use `debugonce()` to step into the last internal function used in `ggplot2::ggplot()`. Note that you will have to use `:::`.
+
+```{r, eval=FALSE}
+library(ggplot2)
+ggplot(mtcars, aes(mpg, cyl)) + geom_point()
+
+debugonce(ggplot2::ggplot) # exercise
+ggplot(mtcars, aes(mpg, cyl)) + geom_point()
+
+debugonce(ggplot2:::set_last_plot) # exercise
+ggplot(mtcars, aes(mpg, cyl)) + geom_point()
+```
+
+# Exercise (trace)
+
+Given the following function, use `trace()` to add a `browser()` statement before the `stop()` and inspect the value of `i`:
+
+Hint: I'll get you started...
+
+```{r, eval=FALSE}
+fun <- function() {
+  for (i in seq_len(1000)) {
+    if (i == 987)
+      stop("Bad number!")
+  }
+}
+
+x <- as.list(body(fun))
+x
+as.list(x[[2]])
+as.list(x[[c(2, 4)]]) # exercise
+# keep going...
+as.list(x[[c(2, 4, 2)]]) # exercise
+as.list(x[[c(2, 4, 2, 3)]]) # exercise
+trace(fun, browser, 
+  at = list(c(2, 4, # keep going...
+    2, 3)  # exercise
+    ))
+
+fun()
+untrace(fun)
+```
+
+# Resources
+
+<https://adv-r.hadley.nz/debugging.html>
+<https://whattheyforgot.org/debugging-r-code.html>
